Minor bugs fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.costs"
+        applicationId "com.touristskaya.expenses"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
