--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.touristskaya.expenses">
 
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Мои расходы"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCIcjK71bD4uN-4siGmssGOvy6JaFVxre4" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".ActivityStatisticDetailed"
             android:screenOrientation="portrait"
@@ -18,6 +30,10 @@
             android:theme="@style/CustomAppStyle"/>
         <activity
             android:name=".ActivityInputData"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomAppStyle"/>
+        <activity
+            android:name=".ActivityBackupData"
             android:screenOrientation="portrait"
             android:theme="@style/CustomAppStyle"/>
 
