Исправил подсчёт среднего значения расходов за месяц на главном экране просмотра статистики.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:theme="@style/CustomAppStyle"/>
 
         <activity
+            android:name=".ActivitySmsExpensesReader"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomAppStyle"/>
+
+        <activity
             android:name=".ActivityMainWithFragments"
             android:screenOrientation="portrait"
             android:theme="@style/CustomAppStyle">
