Работа над store приложения.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:theme="@style/CustomAppStyle"/>
 
         <activity
+            android:name=".src.screens.backup_v2.BackupScreen_V2"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomAppStyle"/>
+
+        <activity
             android:name=".ActivityMainWithFragments"
             android:screenOrientation="portrait"
             android:theme="@style/CustomAppStyle">
